# CS4380-Project0

./: CMakeLists.txt  README.md  main.cpp  myUFls.cpp  myUFls.h
project0/: README.md  main.cpp  makefile  myUFls.cpp  myUFls.h  mytest.cpp
project1/: main.cpp
project1/include/: enum4380.h
project1/src/: enum4380.cpp
